<?xml version="1.0"?>
<package>
  <name>can_decode</name>
  <version>1.0.0</version>
  <description>CAN decode</description>
  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>

  <license>BSD</license>
  <author >Xin Zhang</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>


  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>location_msgs</build_depend>
  <run_depend>location_msgs</run_depend>

</package>
